--- a/P1.ipynb
+++ b/P1.ipynb
@@ -30,9 +30,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Douzi\n",
+      "I love you, Douzi\n",
+      "Douzi\n",
+      "I love you, Douzi\n",
+      "please enter your name:Douzi\n",
+      "I love you, Douzi\n"
+     ]
+    }
+   ],
    "source": [
     "name=input()\n",
     "print('I love you,',name)\n",
@@ -44,22 +57,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "x=input('please enter a number:')\n",
-    "y=input('please enter a number again:')\n",
-    "a=int(x)\n",
-    "b=int(y)\n",
-    "print('a*b=',a*b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\\t\\\n",
+      "\t\"t\"\\\n",
+      "\tt\tt\tt\\\n",
+      "t\tt\tt\tt\t\n"
+     ]
+    }
+   ],
    "source": [
     "print('\\\\\\t\\\\')\n",
     "print('\\t\\\"t\\\"\\\\')\n",
@@ -69,9 +80,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\\\\\\\\\\\\\\\nnnntttt\\\\\n"
+     ]
+    }
+   ],
    "source": [
     "print(r'\\\\\\\\\\\\\\\\nnnntttt\\\\')"
    ]
