--- a/P2.ipynb
+++ b/P2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -23,15 +23,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "please enter a number:-5\n",
-      "5\n"
+      "please enter a number:56\n",
+      "56\n"
      ]
     }
    ],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -61,6 +61,59 @@
    "source": [
     "print('1024*786=',1024*786)\n",
     "print(1024*786)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "please enter number a=5\n",
+      "please enter number b=6\n",
+      "a*b= 30\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=input('please enter number a=')\n",
+    "y=input('please enter number b=')\n",
+    "a=int(x)\n",
+    "b=int(y)\n",
+    "print('a*b=',a*b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 年龄"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "please enter your age:19\n",
+      "adult\n"
+     ]
+    }
+   ],
+   "source": [
+    "s=input('please enter your age:')\n",
+    "a=int(s)\n",
+    "if a>=18:\n",
+    "    print('adult')\n",
+    "else:\n",
+    "    print('child')"
    ]
   }
  ],
