--- a/P3.ipynb
+++ b/P3.ipynb
@@ -201,15 +201,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "请输入您的体重(斤)： 135\n",
+      "请输入您的身高(厘米)： 168\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "请输入您的体重(斤)：129\n",
-      "请输入您的身高(厘米)：168\n",
+      "23.915816326530617\n",
       "正常\n"
      ]
     }
@@ -222,6 +229,7 @@
     "weight=c/2\n",
     "height=d/100\n",
     "BMI=weight/(height*height)\n",
+    "print(BMI)\n",
     "if BMI<18.5:\n",
     "    print('过轻')\n",
     "elif BMI<25:\n",
@@ -1519,7 +1527,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
